--- a/styles.less
+++ b/styles.less
@@ -143,5 +143,26 @@ button {
     color: black;
     border: 0;
 }
+.plans{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+        .types{
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+            align-items: center;
+            justify-content: center;
+        }
+        .arcade,.advanced,.pro{
+           width: 130px;
+           height: 140px;
+           background-color: red;
+           border-radius: 5px;
+        }
+        .time-period{
+            
+        }
+}
 
 
