--- a/styles.less
+++ b/styles.less
@@ -157,11 +157,13 @@ button {
         .arcade,.advanced,.pro{
            width: 130px;
            height: 140px;
-           background-color: red;
+           border: 1px solid hsl(231, 11%, 63%);
            border-radius: 5px;
         }
         .time-period{
-            
+            background-color: #777;
+            height: 50px;
+            border-radius: 5px;
         }
 }
 
