--- a/styles.less
+++ b/styles.less
@@ -161,7 +161,7 @@ button {
            border-radius: 5px;
         }
         .time-period{
-            background-color: #777;
+            background-color:hsl(217, 100%, 97%);
             height: 50px;
             border-radius: 5px;
         }
