--- a/styles.less
+++ b/styles.less
@@ -165,6 +165,19 @@ button {
             height: 50px;
             border-radius: 5px;
         }
+        .arc,.ad,.pro{
+            color: hsl(213, 96%, 18%);
+            font-size: 16px;
+            font-family: Ubuntu;
+            font-weight: 700;
+            margin-left: 20px;
+        }
+        .price,.price2,.price3{
+            font-weight: 500;
+            font-size: 14px;
+            color: hsl(231, 11%, 63%);
+            margin-left: 20px;
+        }
 }
 
 
