--- a/styles.less
+++ b/styles.less
@@ -165,12 +165,13 @@ button {
             height: 50px;
             border-radius: 5px;
         }
-        .arc,.ad,.pro{
+        .arc,.ad,.pr{
             color: hsl(213, 96%, 18%);
             font-size: 16px;
             font-family: Ubuntu;
             font-weight: 700;
             margin-left: 20px;
+            margin-top: 90px;
         }
         .price,.price2,.price3{
             font-weight: 500;
