--- a/styles.less
+++ b/styles.less
@@ -128,6 +128,7 @@ button {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 90px;
 }
 
 .navigation-buttons button {
