--- a/styles.less
+++ b/styles.less
@@ -129,6 +129,14 @@ button {
     flex-direction: row;
     align-items: center;
     margin-top: 90px;
+    gap: 280px;
+}
+.back{
+    background-color:white;
+    color:hsl(231, 11%, 63%);
+    border-radius: 5px;
+    font-family: Ubuntu;
+    font-weight: 700;
 }
 
 .navigation-buttons button {
