--- a/styles.less
+++ b/styles.less
@@ -173,6 +173,8 @@ button {
             background-color:hsl(217, 100%, 97%);
             height: 50px;
             border-radius: 5px;
+            width: 440px;
+            margin-left: 25px;
         }
         .arc,.ad,.pr{
             color: hsl(213, 96%, 18%);
