--- a/styles.less
+++ b/styles.less
@@ -190,6 +190,10 @@ button {
             color: hsl(231, 11%, 63%);
             margin-left: 20px;
         }
+        .arcade img,.advanced img,.pro img{
+            margin-top: 20px;
+            margin-left: 20px;
+        }
 }
 
 
