--- a/styles.less
+++ b/styles.less
@@ -128,7 +128,7 @@ button {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 90px;
+    margin-top: 70px;
     gap: 280px;
 }
 .back{
@@ -195,5 +195,24 @@ button {
             margin-left: 20px;
         }
 }
-
+.addons{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    .online{
+        border: 2px solid hsl(231, 11%, 63%);
+        width: 440px;
+        height: 70px;
+    }
+    .storage{
+        border: 2px solid hsl(231, 11%, 63%);
+        width: 440px;
+        height: 70px;
+    }
+    .profile{
+        border: 2px solid hsl(231, 11%, 63%);
+        width: 440px;
+        height: 70px;
+    }
+}
 
