--- a/styles.less
+++ b/styles.less
@@ -195,10 +195,13 @@ button {
             margin-left: 20px;
         }
 }
-.addons{
+.add-on-step{
+    margin-left: 30px;
+    .addons{
     display: flex;
     flex-direction: column;
     gap: 15px;
+    }
     .online{
         border: 2px solid hsl(231, 11%, 63%);
         width: 440px;
@@ -214,5 +217,5 @@ button {
         width: 440px;
         height: 70px;
     }
-}
 
+}
