--- a/styles.less
+++ b/styles.less
@@ -203,19 +203,23 @@ button {
     gap: 15px;
     }
     .online{
-        border: 2px solid hsl(231, 11%, 63%);
+        border: 1.5px solid hsl(243, 100%, 62%);
         width: 440px;
         height: 70px;
+        border-radius: 5px;
+        
     }
     .storage{
-        border: 2px solid hsl(231, 11%, 63%);
+        border: 1.5px solid hsl(243, 100%, 62%);
         width: 440px;
         height: 70px;
+        border-radius: 5px;
     }
     .profile{
-        border: 2px solid hsl(231, 11%, 63%);
+        border: 1.5px solid hsl(243, 100%, 62%);
         width: 440px;
         height: 70px;
+        border-radius: 5px;
     }
 
 }
