--- a/styles.less
+++ b/styles.less
@@ -207,19 +207,29 @@ button {
         width: 440px;
         height: 70px;
         border-radius: 5px;
+        display: flex;
+        flex-direction: row;
         
+    }
+    .online h3{
+        font-size: 15px;
     }
     .storage{
         border: 1.5px solid hsl(243, 100%, 62%);
         width: 440px;
         height: 70px;
         border-radius: 5px;
+        display: flex;
+        flex-direction: row;
     }
     .profile{
         border: 1.5px solid hsl(243, 100%, 62%);
         width: 440px;
         height: 70px;
         border-radius: 5px;
+        display: flex;
+        flex-direction: row;
     }
+
 
 }
