--- a/styles.less
+++ b/styles.less
@@ -173,8 +173,24 @@ button {
             background-color:hsl(217, 100%, 97%);
             height: 50px;
             border-radius: 5px;
-            width: 440px;
+            width: 310px;
             margin-left: 25px;
+            padding-left: 150px;
+            margin-top: 20px;
+            padding-top: 20px;
+            gap: 20px;
+            display: flex;
+            flex-direction: row;
+        }
+        .monthly{
+            color:hsl(213, 96%, 18%);
+            font-family: Ubuntu;
+            font-weight: 700;
+        }
+        .yearly{
+            color:hsl(231, 11%, 63%);
+            font-family: Ubuntu;
+            font-weight: 700;
         }
         .arc,.ad,.pr{
             color: hsl(213, 96%, 18%);
