--- a/styles.less
+++ b/styles.less
@@ -276,3 +276,45 @@ button {
         margin-left: 20px;
     }
 }
+ 
+.toggle {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 22px;
+}
+
+.toggle__input {
+    display: none;
+}
+
+.toggle__label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: hsl(213, 96%, 18%);
+    border-radius: 34px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.toggle__ball {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 18px;
+    height: 18px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: transform 0.3s;
+}
+
+.toggle__input:checked+.toggle__label {
+    background-color: hsl(213, 96%, 18%);
+}
+
+.toggle__input:checked+.toggle__label .toggle__ball {
+    transform: translateX(26px);
+}
