--- a/styles.less
+++ b/styles.less
@@ -169,13 +169,17 @@ button {
            border: 1px solid hsl(231, 11%, 63%);
            border-radius: 5px;
         }
+        .arcade:hover,.advanced:hover,.pro:hover{
+            border: 2px solid hsl(243, 100%, 62%);
+            cursor: pointer;
+        }
         .time-period{
             background-color:hsl(217, 100%, 97%);
             height: 50px;
             border-radius: 5px;
             width: 310px;
             margin-left: 25px;
-            padding-left: 150px;
+            padding-left: 130px;
             margin-top: 20px;
             padding-top: 20px;
             gap: 20px;
