--- a/styles.less
+++ b/styles.less
@@ -322,3 +322,6 @@ button {
 .toggle__input:checked+.toggle__label .toggle__ball {
     transform: translateX(26px);
 }
+.step-5{
+    background-color: red;
+}
