--- a/styles.less
+++ b/styles.less
@@ -326,4 +326,10 @@ button {
     width: 400px;
     text-align: center;
     margin-top: 120px;
+    line-height: 1.5rem;
+}
+.step-5 p{
+    font-family: Ubuntu;
+    font-weight: 500;
+    color: hsl(231, 11%, 63%);
 }
