--- a/styles.less
+++ b/styles.less
@@ -93,8 +93,16 @@ body {
     flex-direction: column;
     gap: 15px;
 }
+.personal-content h2{
+    font-size: 28px;
+    font-weight: 500;
+    color: hsl(213, 96%, 18%);
+
+}
 .personal-content p{
-    margin-top: -10px;
+    margin-top: -30px;
+    color: hsl(231, 11%, 63%);
+    font-weight: 500;
 
 }
 .step-1{
