--- a/styles.less
+++ b/styles.less
@@ -366,3 +366,45 @@ button {
     font-weight: 500;
     color: hsl(228, 100%, 84%);
 }
+.subscription{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 20px;
+    margin-top: 20px;
+    background-color: hsl(217, 100%, 97%);
+    border-radius: 5px;
+    width: 400px;
+    height: 170px;
+    margin-left: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+.plan-subscribed{
+    font-size: 16px;
+    font-weight: 700;
+    color: hsl(213, 96%, 18%);
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+.addons-subscribed{
+    font-size: 16px;
+    font-weight: 700;
+    color: hsl(213, 96%, 18%);
+    display: flex;
+    flex-direction: row;
+    gap: 150px;
+}
+.total-subscribed{
+    display: flex;
+    flex-direction: row;
+    gap: 200px;
+    margin-top: 20px;
+    margin-left: 30px;
+    font-size: 16px;
+    font-weight: 700;
+    color: hsl(213, 96%, 18%);
+}
+
+
