--- a/styles.less
+++ b/styles.less
@@ -5,9 +5,20 @@
 @button-background-color:hsl(213, 96%, 18%);
 
 
+
 body {
     background-color: @primary-background-color;
     font-family: Ubuntu;
+}
+p{
+    color: hsl(231, 11%, 63%);
+    font-weight: 500;
+}
+h2,h3{
+    font-family: Ubuntu;
+    font-size: 26px;
+    font-weight: 500;
+    color: hsl(213, 96%, 18%);
 }
 
 .container {
@@ -22,7 +33,18 @@ body {
     border-radius: 12px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
+.personal-content h2{
+    font-size: 28px;
+    font-weight: 500;
+    color: hsl(213, 96%, 18%);
 
+}
+.personal-content p{
+    margin-top: -30px;
+    color: hsl(231, 11%, 63%);
+    font-weight: 500;
+
+}
 .steps {
     display: flex;
     flex-direction: column;
@@ -93,18 +115,7 @@ body {
     flex-direction: column;
     gap: 15px;
 }
-.personal-content h2{
-    font-size: 28px;
-    font-weight: 500;
-    color: hsl(213, 96%, 18%);
 
-}
-.personal-content p{
-    margin-top: -30px;
-    color: hsl(231, 11%, 63%);
-    font-weight: 500;
-
-}
 label{
     font-size: 16px;
     font-weight: 700;
