--- a/styles.less
+++ b/styles.less
@@ -436,8 +436,10 @@ button {
         background-color: #f0f0f0;
         padding: 10px;
         width: 375px;
-        height: 100px;
-        margin-left: -40px;
+        height: 250px;
+        margin-left: -10px;
+        margin-top: -50px;
+        background-image: url("./assets/images/bg-sidebar-mobile.svg");
     }
     
     .sidebar-content {
@@ -450,7 +452,7 @@ button {
         display: flex;
         align-items: center;
         cursor: pointer;
-        margin-right: 20px; /* Adjust spacing between steps */
+        margin-right: 20px; 
     }
     
     .sidebar-step:last-child {
@@ -458,8 +460,8 @@ button {
     }
     
     .sidebar-step-circle {
-        width: 20px;
-        height: 20px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background-color: #ddd;
         border: 2px solid #888;
@@ -472,10 +474,12 @@ button {
     
     .step-number {
         font-weight: bold;
+        display: none;
     }
     
     .sidebar-step-text {
         font-size: 14px;
+        display: none;
     }
     
     .plans {
