--- a/styles.less
+++ b/styles.less
@@ -419,15 +419,33 @@ button {
 }
 // less mobile design
 @media (max-width: 768px) {
+    body {
+        overflow: auto; /* Allow body to scroll */
+    }
+    
     .container {
         width: 100%;
-        height: 100%;
+        height: 700px;
         margin-left: 0;
-        margin-top: 300px;
+        margin-top: 150px; /* Adjusted margin-top */
         padding-left: 0;
         border-radius: 0;
-        order: 2;
+        background-color: #fff;
+        position: relative; 
+        z-index: 2; 
+        box-shadow: none;
+        overflow: hidden; /* Hide overflow content */
     }
+    
+    .personal-content {
+        background-color: red;
+        width: 320px;
+        margin-left: -20px;
+        margin-top: 100px;
+        padding: 20px;
+        overflow: hidden; /* Hide overflow content */
+    }
+    
     .sidebar {
         display: flex;
         flex-direction: row;
@@ -440,6 +458,11 @@ button {
         margin-left: -10px;
         margin-top: -50px;
         background-image: url("./assets/images/bg-sidebar-mobile.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        order: 1;
+        z-index: -1;
+        border-radius: 0;
     }
     
     .sidebar-content {
@@ -470,6 +493,7 @@ button {
         justify-content: center;
         align-items: center;
         margin-right: 10px;
+        z-index: 1000;
     }
     
     .step-number {
@@ -481,25 +505,51 @@ button {
         font-size: 14px;
         display: none;
     }
+    input {
+        width: 300px;
+    }
+    .personal-content p{
+        width: 310px;
+        font-size: 20px;
+    }
+    button{
+        margin-top: 50px;
+        margin-left: 220px;
+    }
+    .steps{
+        margin-top: -50px;
+        
+    }
+   
     
     .plans {
         display: flex;
         flex-direction: column;
         gap: 15px;
+        margin-top: 30px;
         .types {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             gap: 20px;
             align-items: center;
             justify-content: center;
+            margin-left: -200px;
+            background-color: #fff;
+        }
+        .plan h3{
+            margin-top: 50px;
         }
         .arcade,
         .advanced,
         .pro {
-            width: 130px;
-            height: 140px;
+            margin-top: 30px;
+            width: 300px;
+            height: 90px;
             border: 1px solid hsl(231, 11%, 63%);
             border-radius: 5px;
+            display: flex;
+            flex-direction: row;
+            
         }
         .arcade:hover,
         .advanced:hover,
