--- a/styles.less
+++ b/styles.less
@@ -487,8 +487,8 @@ button {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-color: #ddd;
-        border: 2px solid #888;
+        background-color:transparent;
+        border: 2px solid #ffff;
         color: #888;
         display: flex;
         justify-content: center;
