--- a/styles.less
+++ b/styles.less
@@ -495,6 +495,12 @@ button {
         align-items: center;
         margin-right: 10px;
         z-index: 1000;
+        gap: 5px;
+    }
+    #step-1-circle, #step-2-circle, #step-3-circle, #step-4-circle, #step-5-circle {
+        color: #fff;
+        font-family: Ubuntu;
+        font-weight: 700;
     }
     
     .step-number {
