--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ h3 {
   left: 0;
   height: 460px;
   width: 230px;
-  background-image: url("./assets/images/bg-sidebar-desktop.svg");
+  background-image: url("assets/images/bg-sidebar-desktop.svg");
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
@@ -175,7 +175,7 @@ label {
 input {
   width: 450px;
   height: 40px;
-  border: 2px solid hsl(231, 11%, 63%);
+  border: 1.5px solid hsl(231, 11%, 63%);
   border-radius: 7px;
   margin-bottom: 10px;
   padding-left: 10px;
@@ -496,7 +496,7 @@ button {
     height: 250px;
     margin-left: -10px;
     margin-top: -50px;
-    background-image: url("./assets/images/bg-sidebar-mobile.svg");
+    background-image: url("assets/images/bg-sidebar-mobile.svg");
     background-repeat: no-repeat;
     background-size: cover;
     order: 1;
